--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -27,8 +27,8 @@ jobs:
         with:
           arguments: bsf/.#devShell
 
-      - name: Run tests
-        run: task test
+      # - name: Run tests
+      #   run: task test
 
       - name: Build app
         run: task build
